# trading23_ml

./: .gitignore  .zshrc  Dockerfile  hello.py  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
data/: nikkei225.csv
src/: analyzer.py  constants.py  database.py  fetcher.py  inference.py  main.py  models.py  sandbox.py  schemas.py  train.py  utils.py  weekly_candidates.py  with_ai.py
