[project]
name = "trading23-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "mplfinance>=0.12.10b0",
    "pandas-stubs>=2.2.3.241009",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "typer>=0.13.0",
    "types-requests>=2.32.0.20241016",
]
